fixing dark mode

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,7 +6,7 @@
 //$blue: #4183C4;
 $blue: #8A2BE2;
 
-@media (prefers-color-scheme: light) {
+//@media (prefers-color-scheme: light) {
 // Grays
 $black: #000;
 $darkerGray: #222;
@@ -14,7 +14,7 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
-}
+//}
 
 @media (prefers-color-scheme: dark) {
 // Grays
